You can now create track scoreboard items

--- a/src/USSEScoreboard/Views/Shared/_Layout.cshtml
+++ b/src/USSEScoreboard/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
                     <li><a asp-area="" asp-controller="Commitments" asp-action="Index">Commitments</a></li>
                     <li><a asp-area="" asp-controller="Wigs" asp-action="Index">Wigs</a></li>
                     <li><a asp-area="" asp-controller="ScoreboardItems" asp-action="Index">Scoreboard Items</a></li>                    
+                    <li><a asp-area="" asp-controller="ScoreboardEntries" asp-action="Index">Scoreboard Entries</a></li>                    
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
