--- a/src/USSEScoreboard/Views/Home/Index.cshtml
+++ b/src/USSEScoreboard/Views/Home/Index.cshtml
@@ -1,8 +1,104 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<div class="page-header">
+    <h1>SE Scoreboard <small>Do... or do not. There is no try.</small></h1>
+</div>
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
+<table class="table table-striped table-hover table-bordered">
+    <thead>
+        <tr>
+            <th style="border-top: 1px solid #fff !important; border-left: 1px solid #fff !important;">&nbsp;</th>
+            <th class="text-center">Commitments</th>
+            <th class="text-center">CRM</th>
+            <th class="text-center">Expenses</th>
+            <th class="text-center">Presentations</th>
+            <th class="text-center">Ascend Working</th>
+        </tr>         
+    </thead>
+    <tr>
+        <td width="20%">Amanda Lange</td>
+        <td width="16%" class="text-center"><a href="#" class="btn btn-primary btn-xs">2 of 3</a></td>
+        <td class="text-center" width="16%"><button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button></td>
+        <td class="text-center" width="16%"><button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></button></td>
+        <td width="16%" class="text-center"><a href="#" class="badge">3</a></td>
+        <td width="16%" class="text-center"><a href="#" class="badge">2</a></td>
+    </tr>
+    <tr>
+        <td width="20%">Blain Barton</td>
+        <td width="16%" class="text-center"><a href="#" class="btn btn-success btn-xs">3 of 3</a></td>
+        <td class="text-center" width="16%"><button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button></td>
+        <td class="text-center" width="16%"><button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></button></td>
+        <td width="16%" class="text-center"><a href="#" class="badge">3</a></td>
+        <td width="16%" class="text-center"><a href="#" class="badge">2</a></td>
+    </tr>
+    <tr>
+        <td width="20%">Dave Voyles</td>
+        <td width="16%" class="text-center"><a href="#" class="btn btn-primary btn-xs">2 of 3</a></td>
+        <td class="text-center" width="16%"><button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button></td>
+        <td class="text-center" width="16%"><button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></button></td>
+        <td width="16%" class="text-center"><a href="#" class="badge">3</a></td>
+        <td width="16%" class="text-center"><a href="#" class="badge">2</a></td>
+    </tr>
+    <tr>
+        <td width="20%">David Crook</td>
+        <td width="16%" class="text-center"><a href="#" class="btn btn-success btn-xs">3 of 3</a></td>
+        <td class="text-center" width="16%"><button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button></td>
+        <td class="text-center" width="16%"><button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></button></td>
+        <td width="16%" class="text-center"><a href="#" class="badge">3</a></td>
+        <td width="16%" class="text-center"><a href="#" class="badge">2</a></td>
+    </tr>
+    <tr>
+        <td width="20%">Ian Philpot</td>
+        <td width="16%" class="text-center"><a href="#" class="btn btn-primary btn-xs">2 of 3</a></td>
+        <td class="text-center" width="16%"><button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button></td>
+        <td class="text-center" width="16%"><button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button></td>
+        <td width="16%" class="text-center"><a href="#" class="badge">3</a></td>
+        <td width="16%" class="text-center"><a href="#" class="badge">2</a></td>
+    </tr>
+    <tr>
+        <td width="20%">Joe Raio</td>
+        <td width="16%" class="text-center"><a href="#" class="btn btn-danger btn-xs">0 of 3</a></td>
+        <td class="text-center" width="16%"><button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button></td>
+        <td class="text-center" width="16%"><button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></button></td>
+        <td width="16%" class="text-center"><a href="#" class="badge">3</a></td>
+        <td width="16%" class="text-center"><a href="#" class="badge">2</a></td>
+    </tr>
+    <tr>
+        <td width="20%">Kristin Ottofy</td>
+        <td width="16%" class="text-center"><a href="#" class="btn btn-primary btn-xs">2 of 3</a></td>
+        <td class="text-center" width="16%"><button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button></td>
+        <td class="text-center" width="16%"><button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></button></td>
+        <td width="16%" class="text-center"><a href="#" class="badge">3</a></td>
+        <td width="16%" class="text-center"><a href="#" class="badge">2</a></td>
+    </tr>
+    <tr>
+        <td width="20%">Mostafa Elzoghbi</td>
+        <td width="16%" class="text-center"><a href="#" class="btn btn-primary btn-xs">2 of 3</a></td>
+        <td class="text-center" width="16%"><button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button></td>
+        <td class="text-center" width="16%"><button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></button></td>
+        <td width="16%" class="text-center"><a href="#" class="badge">3</a></td>
+        <td width="16%" class="text-center"><a href="#" class="badge">2</a></td>
+    </tr>
+    <tr>
+        <td width="20%">Shahed Chowduri</td>
+        <td width="16%" class="text-center"><a href="#" class="btn btn-primary btn-xs">2 of 3</a></td>
+        <td class="text-center" width="16%"><button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button></td>
+        <td class="text-center" width="16%"><button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></button></td>
+        <td width="16%" class="text-center"><a href="#" class="badge">3</a></td>
+        <td width="16%" class="text-center"><a href="#" class="badge">2</a></td>
+    </tr>
+    <tr>
+        <td width="20%">Tommy Patterson</td>
+        <td width="16%" class="text-center"><a href="#" class="btn btn-danger btn-xs">0 of 3</a></td>
+        <td class="text-center" width="16%"><button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button></td>
+        <td class="text-center" width="16%"><button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></button></td>
+        <td width="16%" class="text-center"><a href="#" class="badge">3</a></td>
+        <td width="16%" class="text-center"><a href="#" class="badge">2</a></td>
+    </tr>
+</table>
+
+@*<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -106,4 +202,4 @@
             <li><a href="http://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
         </ul>
     </div>
-</div>
+</div>*@
