--- a/src/USSEScoreboard/Views/Commitments/Index.cshtml
+++ b/src/USSEScoreboard/Views/Commitments/Index.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<script src="~/lib/jquery/dist/jquery.js"></script>
+<script src="~/js/evangelistCommitment.js"></script>
+
 <h2>Index</h2>
 
 <p>
