Refactored some js from index to separate file. Also draws 3 charts beneath WIG page

--- a/src/USSEScoreboard/Views/Wigs/Index.cshtml
+++ b/src/USSEScoreboard/Views/Wigs/Index.cshtml
@@ -3,6 +3,13 @@
 @{
     ViewData["Title"] = "Index";
 }
+<head>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="~/js/evangelist.js"></script>
+    <script src="~/js/wigCharts.js"></script>
+</head>
+
 
 <h2>Index</h2>
 
@@ -52,3 +59,7 @@
 }
     </tbody>
 </table>
+
+<div id="community_actual_metric" style="width: 900px; height: 500px;"></div>
+<div id="ascend_actual_metric" style="width: 900px; height: 500px;"></div>
+<div id="weeks_metric" style="width: 900px; height: 500px;"></div>
