--- a/src/USSEScoreboard/Views/Commitments/Index.cshtml
+++ b/src/USSEScoreboard/Views/Commitments/Index.cshtml
@@ -6,6 +6,7 @@
 
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script src="~/lib/jquery/dist/jquery.js"></script>
+<script src="~/js/evangelist.js"></script>
 <script src="~/js/evangelistCommitment.js"></script>
 
 <h2>Index</h2>
