Show commitments based on logged in user, create commit default to being logged in, redirec to my commits after creating, sort by date created, only show dashboard to logged in users

--- a/src/USSEScoreboard/Views/Shared/_Layout.cshtml
+++ b/src/USSEScoreboard/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - USSEScoreboard</title>
+    <title>@ViewData["Title"] - Team South East</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,12 +26,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">USSEScoreboard</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Team South East</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Commitments" asp-action="Index">Commitments</a></li>
+                    <li><a asp-area="" asp-controller="Commitments" asp-action="My">My Commitments</a></li>
                     <li><a asp-area="" asp-controller="Wigs" asp-action="Index">Wigs</a></li>
                     <li><a asp-area="" asp-controller="ScoreboardItems" asp-action="Index">Scoreboard Items</a></li>                    
                     <li><a asp-area="" asp-controller="ScoreboardEntries" asp-action="Index">Scoreboard Entries</a></li>                    
