--- a/src/USSEScoreboard/Views/Commitments/Create.cshtml
+++ b/src/USSEScoreboard/Views/Commitments/Create.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
+@inject UserManager<ApplicationUser> UserManager
+
 <h2>Create</h2>
 
 <form asp-action="Create">
@@ -34,7 +36,7 @@
         </div>
 
         <div class="form-group">
-            <label asp-for="SelectedUserID" class="col-md-2 control-label"></label>
+            <label class="col-md-2 control-label">Team Member</label>
             <div class="col-md-10">
                 <select asp-for="SelectedUserID" asp-items="@(new SelectList(Model.Users,"UserProfileId","FullName"))" class="form-control"></select>
                 <span asp-validation-for="SelectedUserID" class="text-danger" />
@@ -49,7 +51,8 @@
 </form>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="My">Back to My Commitments</a><br/><br />
+    <a asp-action="Index">Back to All Commitments</a>
 </div>
 
 @section Scripts {
