--- a/src/USSEScoreboard/Views/Commitments/Edit.cshtml
+++ b/src/USSEScoreboard/Views/Commitments/Edit.cshtml
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="SelectedUserID" class="col-md-2 control-label"></label>
+            <label class="col-md-2 control-label">Team Member</label>
             <div class="col-md-10">
                 <select asp-for="SelectedUserID" asp-items="@(new SelectList(Model.Users,"UserProfileId","FullName"))" class="form-control"></select>
                 <span asp-validation-for="SelectedUserID" class="text-danger" />
