Home page pulling live data. Added additional fields for user profile. Added migration

--- a/src/USSEScoreboard/Views/Home/Index.cshtml
+++ b/src/USSEScoreboard/Views/Home/Index.cshtml
@@ -11,13 +11,6 @@
 @if (SignInManager.IsSignedIn(User))
 {
     //Show Dashboard if Logged In
-    @*@foreach (UserProfile TeamMember in ViewBag.Team)
-    {
-        <div>
-            TeamMeber.FullName
-        </div>
-
-    }*@
     <div class="container">
         <div class="col-md-2">
             <img src="~/images/yoda.png" width="160" />
@@ -35,86 +28,21 @@
                         <th class="text-center">Ascend Working</th>
                     </tr>
                 </thead>
-                <tr>
-                    <td width="20%">Amanda Lange</td>
-                    <td width="16%" class="text-center"><a href="#" class="btn btn-primary btn-xs">2 of 3</a></td>
-                    <td class="text-center" width="16%"><button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button></td>
-                    <td class="text-center" width="16%"><button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></button></td>
-                    <td width="16%" class="text-center"><a href="#" class="badge">3</a></td>
-                    <td width="16%" class="text-center"><a href="#" class="badge">2</a></td>
-                </tr>
-                <tr>
-                    <td width="20%">Blain Barton</td>
-                    <td width="16%" class="text-center"><a href="#" class="btn btn-success btn-xs">3 of 3</a></td>
-                    <td class="text-center" width="16%"><button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button></td>
-                    <td class="text-center" width="16%"><button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></button></td>
-                    <td width="16%" class="text-center"><a href="#" class="badge">3</a></td>
-                    <td width="16%" class="text-center"><a href="#" class="badge">2</a></td>
-                </tr>
-                <tr>
-                    <td width="20%">Dave Voyles</td>
-                    <td width="16%" class="text-center"><a href="#" class="btn btn-primary btn-xs">2 of 3</a></td>
-                    <td class="text-center" width="16%"><button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button></td>
-                    <td class="text-center" width="16%"><button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></button></td>
-                    <td width="16%" class="text-center"><a href="#" class="badge">3</a></td>
-                    <td width="16%" class="text-center"><a href="#" class="badge">2</a></td>
-                </tr>
-                <tr>
-                    <td width="20%">David Crook</td>
-                    <td width="16%" class="text-center"><a href="#" class="btn btn-success btn-xs">3 of 3</a></td>
-                    <td class="text-center" width="16%"><button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button></td>
-                    <td class="text-center" width="16%"><button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></button></td>
-                    <td width="16%" class="text-center"><a href="#" class="badge">3</a></td>
-                    <td width="16%" class="text-center"><a href="#" class="badge">2</a></td>
-                </tr>
-                <tr>
-                    <td width="20%">Ian Philpot</td>
-                    <td width="16%" class="text-center"><a href="#" class="btn btn-primary btn-xs">2 of 3</a></td>
-                    <td class="text-center" width="16%"><button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button></td>
-                    <td class="text-center" width="16%"><button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button></td>
-                    <td width="16%" class="text-center"><a href="#" class="badge">3</a></td>
-                    <td width="16%" class="text-center"><a href="#" class="badge">2</a></td>
-                </tr>
-                <tr>
-                    <td width="20%">Joe Raio</td>
-                    <td width="16%" class="text-center"><a href="#" class="btn btn-danger btn-xs">0 of 3</a></td>
-                    <td class="text-center" width="16%"><button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button></td>
-                    <td class="text-center" width="16%"><button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></button></td>
-                    <td width="16%" class="text-center"><a href="#" class="badge">3</a></td>
-                    <td width="16%" class="text-center"><a href="#" class="badge">2</a></td>
-                </tr>
-                <tr>
-                    <td width="20%">Kristin Ottofy</td>
-                    <td width="16%" class="text-center"><a href="#" class="btn btn-primary btn-xs">2 of 3</a></td>
-                    <td class="text-center" width="16%"><button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button></td>
-                    <td class="text-center" width="16%"><button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></button></td>
-                    <td width="16%" class="text-center"><a href="#" class="badge">3</a></td>
-                    <td width="16%" class="text-center"><a href="#" class="badge">2</a></td>
-                </tr>
-                <tr>
-                    <td width="20%">Mostafa Elzoghbi</td>
-                    <td width="16%" class="text-center"><a href="#" class="btn btn-primary btn-xs">2 of 3</a></td>
-                    <td class="text-center" width="16%"><button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button></td>
-                    <td class="text-center" width="16%"><button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></button></td>
-                    <td width="16%" class="text-center"><a href="#" class="badge">3</a></td>
-                    <td width="16%" class="text-center"><a href="#" class="badge">2</a></td>
-                </tr>
-                <tr>
-                    <td width="20%">Shahed Chowduri</td>
-                    <td width="16%" class="text-center"><a href="#" class="btn btn-primary btn-xs">2 of 3</a></td>
-                    <td class="text-center" width="16%"><button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button></td>
-                    <td class="text-center" width="16%"><button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></button></td>
-                    <td width="16%" class="text-center"><a href="#" class="badge">3</a></td>
-                    <td width="16%" class="text-center"><a href="#" class="badge">2</a></td>
-                </tr>
-                <tr>
-                    <td width="20%">Tommy Patterson</td>
-                    <td width="16%" class="text-center"><a href="#" class="btn btn-danger btn-xs">0 of 3</a></td>
-                    <td class="text-center" width="16%"><button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button></td>
-                    <td class="text-center" width="16%"><button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></button></td>
-                    <td width="16%" class="text-center"><a href="#" class="badge">3</a></td>
-                    <td width="16%" class="text-center"><a href="#" class="badge">2</a></td>
-                </tr>
+                @* Start TE Table *@
+
+                @foreach (UserProfile TeamMember in ViewBag.Team)
+                {
+                    <tr>
+                        <td width="20%">@TeamMember.FullName</td>
+                        <td width="16%" class="text-center"><a asp-controller="Commitments" asp-action="SearchByUser" asp-route-id="@TeamMember.UserProfileId" class="btn btn-primary btn-xs">2 of 3</a></td>
+                        <td class="text-center" width="16%"><button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button></td>
+                        <td class="text-center" width="16%"><button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></button></td>
+                        <td width="16%" class="text-center"><a href="#" class="badge">3</a></td>
+                        <td width="16%" class="text-center"><a href="#" class="badge">2</a></td>
+                    </tr>
+                }
+
+                @* // End TE Table *@
                 <tr>
                     <td></td>
                     <td></td>
