--- a/src/USSEScoreboard/Views/Commitments/My.cshtml
+++ b/src/USSEScoreboard/Views/Commitments/My.cshtml
@@ -10,32 +10,59 @@
     <a asp-action="Create">Create New</a>
 </p>
 
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th>Date Created</th>
-            <th>Title</th>
-            <th>Owner</th>
-            <th>Status</th>
-            <th>Action</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.Commitments)
-        {
+<div class="container">
+    <div class="col-md-2">
+        <form asp-action="ToggleExpenses">
+            @if (Model.IsExpenses)
+            {
+                <input type="submit" class="btn btn-success" value="Toggle Expenses">
+            }
+            else
+            {
+                <input type="submit" class="btn btn-warning" value="Toggle Expenses">
+            }
+        </form>
+    </div>
+    <div class="col-md-2">
+        <form asp-action="ToggleCRM">
+            @if (Model.IsCRM)
+            {
+                <input type="submit" class="btn btn-success" value="Toggle CRM">
+            }
+            else
+            {
+                <input type="submit" class="btn btn-warning" value="Toggle CRM">
+            }
+        </form>
+    </div>
+    <div class="col-md-8"></div>
+</div>
+    <table class="table table-striped">
+        <thead>
             <tr>
-                <td>@item.DateCreated.ToString("d")</td>
-                <td>@item.Title</td>
-                <td>@item.UserProfile.FullName</td>
-                <td>@item.Status</td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span> Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Delete</a>
-                    
-                </td>
+                <th>Date Created</th>
+                <th>Title</th>
+                <th>Owner</th>
+                <th>Status</th>
+                <th>Action</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.Commitments)
+            {
+                <tr>
+                    <td>@item.DateCreated.ToString("d")</td>
+                    <td>@item.Title</td>
+                    <td>@item.UserProfile.FullName</td>
+                    <td>@item.Status</td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.Id"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.Id"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span> Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.Id"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Delete</a>
+
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 
