Presentation Entry model and migrations. This will replace scoreboard entry shortly

--- a/src/USSEScoreboard/Views/Commitments/My.cshtml
+++ b/src/USSEScoreboard/Views/Commitments/My.cshtml
@@ -10,6 +10,9 @@
     <a asp-action="Create">Create New</a>
 </p>
 
+<!--
+TODO: Clean this up...     
+-->
 <div class="container">
     <div class="col-md-2">
         <form asp-action="ToggleExpenses">
