--- a/src/USSEScoreboard/Views/Shared/_Layout.cshtml
+++ b/src/USSEScoreboard/Views/Shared/_Layout.cshtml
@@ -33,8 +33,8 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Commitments" asp-action="My">My Commitments</a></li>
                     <li><a asp-area="" asp-controller="Wigs" asp-action="Index">Wigs</a></li>
-                    <li><a asp-area="" asp-controller="ScoreboardItems" asp-action="Index">Scoreboard Items</a></li>                    
-                    <li><a asp-area="" asp-controller="ScoreboardEntries" asp-action="Index">Scoreboard Entries</a></li>                    
+                    @*<li><a asp-area="" asp-controller="ScoreboardItems" asp-action="Index">Scoreboard Items</a></li>                    
+                    <li><a asp-area="" asp-controller="ScoreboardEntries" asp-action="Index">Scoreboard Entries</a></li>*@                    
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
